add convertBooleans
