# docs/swagger.json
@@ -220,7 +220,8 @@
                   "isFavorite": {
                     "description": "Indicates whether the contact is marked as a favorite",
                     "type": "boolean",
-                    "example": false
+                    "example": false,
+                    "default": false
                   },
                   "email": {
                     "description": "The email of the contact",
@@ -359,6 +360,7 @@
             "required": true,
             "schema": {
               "type": "string",
+              "format": "objectId",
               "example": "66a35382997eac73e992ae30"
             },
             "description": "The ID of the contact to update"
@@ -379,6 +381,11 @@
                     "description": "The phone number of the contact",
                     "type": "string",
                     "example": "+1234567890"
+                  },
+                  "isFavorite": {
+                    "description": "Indicates whether the contact is marked as a favorite",
+                    "type": "boolean",
+                    "example": true
                   },
                   "email": {
                     "description": "The email of the contact",
@@ -404,50 +411,6 @@
                   }
                 },
                 "additionalProperties": false
-              }
-            },
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": [
-                  "name",
-                  "phoneNumber",
-                  "contactType"
-                ],
-                "properties": {
-                  "name": {
-                    "description": "The name of the contact",
-                    "type": "string",
-                    "example": "John Doe"
-                  },
-                  "phoneNumber": {
-                    "description": "The phone number of the contact",
-                    "type": "string",
-                    "example": "+1234567890"
-                  },
-                  "email": {
-                    "description": "The email of the contact",
-                    "type": "string",
-                    "example": "johndoe@gmail.com"
-                  },
-                  "isFavorite": {
-                    "description": "Indicates whether the contact is marked as a favorite",
-                    "type": "boolean",
-                    "example": true,
-                    "default": false
-                  },
-                  "contactType": {
-                    "description": "Specifies the type of contact",
-                    "type": "string",
-                    "enum": [
-                      "work",
-                      "home",
-                      "personal"
-                    ],
-                    "example": "work",
-                    "default": "personal"
-                  }
-                }
               }
             }
           },
@@ -1043,8 +1006,8 @@
           "_id",
           "name",
           "phoneNumber",
-          "isFavourite",
-          "contactType"
+          "contactType",
+          "userId"
         ],
         "properties": {
           "_id": {
